fix spacing in navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   font-family: 'Cantarell', sans-serif;
   text-transform: uppercase;
   position: fixed-top;
+  margin: 0;
   // top: 0;
   // z-index: 100;
 
